--- a/Site/Site.csproj
+++ b/Site/Site.csproj
@@ -66,7 +66,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <Content Include="Scripts\jquery-1.9.1.min.map" />
+    <None Include="Scripts\jquery-3.1.1.intellisense.js" />
+    <Content Include="Scripts\jquery-3.1.1.js" />
+    <Content Include="Scripts\jquery-3.1.1.min.js" />
+    <Content Include="Scripts\jquery-3.1.1.slim.js" />
+    <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
+    <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
+    <Content Include="Scripts\jquery-3.1.1.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -105,7 +111,6 @@
     <Content Include="Pages\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Pages\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="Pages\Scripts\jquery-1.9.1.min.map" />
-    <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Pages\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Pages\Scripts\bootstrap.js" />
     <Content Include="Pages\Scripts\bootstrap.min.js" />
@@ -114,8 +119,6 @@
     <Content Include="Pages\Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\jquery-1.9.1.js" />
-    <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
