--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -40,9 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Pessoa.cs" />
+    <Compile Include="Model\Animal.cs" />
+    <Compile Include="Model\Interesse.cs" />
+    <Compile Include="Model\Usuario.cs" />
+    <Compile Include="Persistence\AnimalDAL.cs" />
     <Compile Include="Persistence\Conexao.cs" />
-    <Compile Include="Persistence\PessoaDAL.cs" />
+    <Compile Include="Persistence\InteresseDAL.cs" />
+    <Compile Include="Persistence\UsuarioDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
