--- a/Site/Site.csproj
+++ b/Site/Site.csproj
@@ -69,6 +69,7 @@
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Pages\CadastroAnimal.aspx" />
     <Content Include="Pages\ConsultaAnimais.aspx" />
+    <Content Include="Pages\Login.aspx" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
@@ -165,6 +166,13 @@
     </Compile>
     <Compile Include="Pages\DetalhesUsuarios.aspx.designer.cs">
       <DependentUpon>DetalhesUsuarios.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
